Added routing module and design the UI for header and navigation section.

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,3 +1,31 @@
-<p>
-  categories works!
-</p>
+<section id="categories-content">
+    <div class="overlay" [ngClass]="isnavOpen ? 'show' : ''"></div>
+    <div class="row m-0 page-title-section">
+        <div class="col-md-12 page-title">
+            <h2>Project Categories</h2>
+            <a href="" class="btn btn-primary tbtn"><span><i class="fa fa-plus" aria-hidden="true"></i></span>Add new category</a>
+        </div>
+    </div>
+    <div class="row m-0">
+        <div class="col-lg-5 col-sm-12 categories-section">
+            <div class="form-group">
+                <input type="text" class="form-control">
+            </div>
+            <div class="categories-list" *ngFor="let category of categories">
+                <a href="#" class="single-category">
+                    <div class="avatar-image">
+                        <span>{{ category.image }}</span>
+                    </div>
+                    <div class="category-details">
+                        <div class="title">
+                            <h5>{{ category.name }}</h5>
+                            <span class="badge badge-primary badge-pill">{{ category.projects }}</span>
+                        </div>
+                        <small class="description" *ngIf="category.description !== ''">{{ category.description }}</small>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="col-lg-7 col-sm-0"></div>
+    </div>
+</section>
