--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,34 @@
-<p>
-  navigation works!
-</p>
+<section id="navigation" [ngClass]="isnavOpen ? 'nav-open' : ''">
+    <div class="top-section">
+        <div class="profile">
+            <div class="profile-pic-box">
+                <img src="https://randomuser.me/api/portraits/men/35.jpg">
+                <span><i class="fa fa-cog" aria-hidden="true"></i></span>
+            </div>
+            <p>Jhon Doe</p>
+        </div>
+        <ul class="side-bar">
+            <li class="side-bar-menu">
+                <a class="side-bar-menu-item" href="#"><span><i class="fa fa-home" aria-hidden="true"></i></span>Projects</a>
+            </li>
+            <li class="side-bar-menu">
+                <a class="side-bar-menu-item" routerLinkActive="active" routerLink="/categories"><span><i class="fa fa-home" aria-hidden="true"></i></span>Categories</a>
+            </li>
+            <li class="side-bar-menu">
+                <a class="side-bar-menu-item" href="#"><span><i class="fa fa-home" aria-hidden="true"></i></span>Members</a>
+            </li>
+            <li class="side-bar-menu">
+                <a class="side-bar-menu-item" href="#"><span><i class="fa fa-home" aria-hidden="true"></i></span>TimeLine</a>
+            </li>
+            <li class="side-bar-menu">
+                <a class="side-bar-menu-item" href="#"><span><i class="fa fa-home" aria-hidden="true"></i></span>Reports</a>
+            </li>
+        </ul>
+    </div>
+    <div class="bottom-section">
+        <hr>
+        <h4>Need Help ?</h4>
+        <p>+1 888 888 8787<br>hello@zora.in</p>
+        <a href="#">Visit FAQ</a>
+    </div>
+</section>
