--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,8 @@
-<p>
-  header works!
-</p>
+<nav class="navbar fixed-top navbar-light">
+    <a class="navbar-brand" href="#">Tracker</a>
+    <span class="toggle-nav"
+        (click)="onNavOpen()"
+        ><i class="fa fa-bars" *ngIf="!isnavOpen" aria-hidden="true"></i>
+        <i class="fa fa-times" *ngIf="isnavOpen" aria-hidden="true"></i>
+    </span>
+</nav>
