--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,42 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900');
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    background: #f4f6f8;
+    color: #41555f;
+    font-family: 'Open Sans', sans-serif;
+}
+body::-webkit-scrollbar {
+    width: 4px;
+    background-color: white;
+}
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.1);
+    background-color: #555;
+}
+
+.tbtn {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    letter-spacing: .05rem;
+    padding: 10px 20px;
+}
+
+.tbtn .fa {
+    color: white;
+    padding: 0px 5px 0px 0px;
+}
+
+@media screen and (max-width: 1023px) {
+    #categories-content {
+        margin-left: 0px !important;
+        width: 100% !important;
+    }
+}
