--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,900');
+@import url( 'https://fonts.googleapis.com/css?family=Lato:400,700,900');
 
 * {
     box-sizing: border-box;
+}
+html, body {
+	height: 100%;
 }
 
 body {
     background: #f4f6f8;
     color: #41555f;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 body::-webkit-scrollbar {
     width: 4px;
@@ -32,6 +35,10 @@ body::-webkit-scrollbar-thumb {
 .tbtn .fa {
     color: white;
     padding: 0px 5px 0px 0px;
+}
+
+.tshadow {
+    box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (max-width: 1023px) {
