--- a/src/app/categories/category-detail/category-detail.component.html
+++ b/src/app/categories/category-detail/category-detail.component.html
@@ -1,3 +1,4 @@
-<p>
-  category-detail works!
-</p>
+<div class="empty-projects d-flex flex-column align-items-center justify-content-center">
+    <span><i class="fa fa-folder-open" aria-hidden="true"></i></span>
+    <p>No projects available.</p>
+</div>
