--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -8,14 +8,7 @@
     </div>
     <div class="row m-0">
         <div class="col-lg-5 col-sm-12 categories-section">
-            <div class="form-group search">
-                <input type="text"
-                class="form-control tshadow"
-                placeholder="&#61442;&nbsp;&nbsp;&nbsp;Search"
-                [(ngModel)] = "filteredCategories"
-                >
-            </div>
-            <div class="categories-list" *ngFor="let category of categories | filter:filteredCategories:'name'">
+            <div class="categories-list" *ngFor="let category of categories">
                 <a style="cursor:pointer" [routerLink] = "[category.id]" routerLinkActive="bg-primary active" class="single-category">
                     <div class="avatar-image">
                         <span>{{ category.image }}</span>
