Implement functionality to toggle addcategory and backtocategory buttons based on the page on which the user visits.

--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -44,6 +44,10 @@
     color: slategray;
 }
 
+#categories-content .page-title-section .page-title .addcategory.hidden {
+    display: none;
+}
+
 @media screen and (max-width: 767px) {
     #categories-content .page-title-section .page-title {
         flex-direction: column;
