Created project and project list component. Added global css to style main component and header on every page

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,7 +9,7 @@
         </div>
         <ul class="side-bar">
             <li class="side-bar-menu">
-                <a class="side-bar-menu-item" href="#"><span><i class="fa fa-home" aria-hidden="true"></i></span>Projects</a>
+                <a class="side-bar-menu-item" routerLinkActive="active" routerLink="/projects"><span><i class="fa fa-home" aria-hidden="true"></i></span>Projects</a>
             </li>
             <li class="side-bar-menu">
                 <a class="side-bar-menu-item" routerLinkActive="active" routerLink="/categories"><span><i class="fa fa-home" aria-hidden="true"></i></span>Categories</a>
