--- a/src/styles.css
+++ b/src/styles.css
@@ -47,3 +47,74 @@ body::-webkit-scrollbar-thumb {
         width: 100% !important;
     }
 }
+
+.main-content {
+    margin-left: 260px;
+    padding-top: 72px;
+    width: calc(100% - 260px);
+    display: -ms-flexbox;
+    display: flex;
+    min-height: 100%;
+    flex-direction: column;
+    position: relative;
+}
+.main-content .overlay {
+    display: none;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1;
+}
+.main-content .overlay.show {
+    display: block;
+}
+
+.main-content .row {
+    flex-wrap: nowrap;
+    padding: 20px 50px;
+    width: 100%;
+}
+
+.main-content .page-title-section .page-title {
+    padding: 0 0 10px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+
+.main-content .page-title-section .page-title h2 {
+    font-size: 2rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    margin: 0;
+    color: slategray;
+}
+
+.main-content .page-title-section .page-title .addcategory.hidden {
+    display: none;
+}
+
+@media screen and (max-width: 767px) {
+    .main-content .page-title-section .page-title {
+        flex-direction: column;
+    }
+
+    .main-content .page-title-section .page-title h2 {
+        text-align: center;
+    }
+
+    .main-content .page-title-section .page-title a{
+        margin-top: 20px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .main-content .row {
+        padding: 20px !important;
+    }
+}
